# timur-backend

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  gh-docker-compose.yml  pyproject.toml  schema.graphql
.github/: dependabot.yaml
.github/workflows/: ci.yml  lint.yml
apps/common/: admin.py  dataloaders.py  models.py  serializers.py  types.py
apps/common/management/commands/: graphql_schema.py  init_development.py
apps/journal/: apps.py  enums.py  models.py  mutations.py  queries.py  serializers.py  types.py
apps/journal/migrations/: 0001_initial.py  0002_initial.py
apps/project/: admin.py  dataloaders.py  filters.py  models.py  orders.py  queries.py  types.py
apps/project/migrations/: 0001_initial.py  0002_initial.py
apps/track/: admin.py  dataloaders.py  enums.py  filters.py  models.py  mutations.py  orders.py  queries.py  serializers.py  types.py
apps/track/migrations/: 0001_initial.py  0002_initial.py  0003_contract_total_estimated_hours_task_estimated_hours_and_more.py
apps/user/: admin.py  dataloaders.py  enums.py  models.py  mutations.py  queries.py  serializers.py  types.py
apps/user/migrations/: 0001_initial.py  0002_user_department.py  0003_alter_user_department.py
main/: caches.py  sentry.py  settings.py  urls.py
main/graphql/: dataloaders.py  enums.py  schema.py
utils/: common.py
utils/strawberry/: enums.py  mutations.py  paginations.py  serializers.py  transformers.py  types.py
